# bip39-monero-derive

./: .gitignore  Makefile  README.md  deboot-setup.sh  derive.py  pyproject.toml  requirements-dev.txt  test.py  tox.ini
.github/workflows/: package-script.yml  package.yml  test.yml
base58/: monero_words.py
bip39/: __init__.py  data.py
monero/: __init__.py  data.py
monero_mnemonic/: __init__.py  data.py
slip0010/: __init__.py  ed25519.py  ed25519_2.py  keccak2.py  sd.py  wallet.py
tests/: conftest.py  test_hash160.py  test_integration.py  test_ui.py  test_util.py  test_vectors.json  test_wordlist.py  util.py
ui/: __init__.py  input.py  pick.py
util/: __init__.py  debug.py  ripemd160.py  screen.py  test.py  wordlist.py
