[tool.poetry]
name = "bip39-monero-derive"
version = "0.1.0"
description = "Standalone utility for deriving Monero mnemonic seeds from standard BIP 39 phrases (via SLIP-10)"
authors = ["aldum <aldum@artixlinux.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ecdsa = "^0.18.0"

[tool.poetry.group.dev.dependencies]
stickytape = "^0.2.1"
pyinstaller = "^5.8.0"
ed25519 = "^1.5"
base58 = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
script = "bip39_monero_derive:main"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::pytest.PytestCollectionWarning"
]
